# cpra-hsi

./: .gitignore  README.md  pyproject.toml
HSI/: AlligatorHSI.py  BaldEagle.py  CrawfishHSI.py  hsi.py  hsi_testing.ipynb
VegProcessor/: README.md  batch_run.py  config.yaml  hsi.py  hydro_logic.py  metrics.py  output_vars.py  plotting.py  preprocess.py  run.ipynb  run_jg.ipynb  test.ipynb  test.py  testing.py  utils.py  validate.py  veg_config.yaml  veg_logic.py  veg_transition.py  xarr_tools.py
VegProcessor/configs/: .gitignore  README.md  hsi_config.example.yaml  hsi_config_1-08ft_slr_dry.yaml  hsi_config_1-08ft_slr_moderate.yaml  hsi_config_1-08ft_slr_wet.yaml  hsi_config_2ft_slr_dry.yaml  hsi_config_2ft_slr_moderate.yaml  hsi_config_2ft_slr_wet.yaml  hsi_config_base_dry.yaml  hsi_config_base_moderate.yaml  hsi_config_base_wet.yaml  hsi_config_testing.yaml  veg_config.example.yaml  veg_config_1-08ft_slr_dry.yaml  veg_config_1-08ft_slr_moderate.yaml  veg_config_1-08ft_slr_wet.yaml  veg_config_2ft_slr_dry.yaml  veg_config_2ft_slr_moderate.yaml  veg_config_2ft_slr_wet.yaml  veg_config_base_dry.yaml  veg_config_base_moderate.yaml  veg_config_base_wet.yaml  veg_config_daily_test.yaml  veg_config_testing.yaml
VegProcessor/noteboooks/: run.ipynb  test.ipynb
VegProcessor/sequences/: dry_sequence.csv  moderate_sequence.csv  wet_conditions.csv  wet_sequence.csv
VegProcessor/species_hsi/: alligator.py  bass.py  (+10 more)
environment/: environment.yml  environment_multiplatform.yml
notebook/: netcdf_size_testing.ipynb
notebooks/: netcdf_size_testing.ipynb  veg_transition.ipynb  veg_vars_testing.ipynb
scripts/: dissolved_oxygen_nb.py  nc_to_zarr.py  predict_dissolved_oxygen.py  run_dissolved_oxygen.py  run_dissolved_oxygen_all.sh
veg_processor/: preprocess.py
(+2 files in other folders)
